testsuite/tests/v1/bin_op/relational/gt/non_int/test.out
Error: Error from the Lua engine
   ╭─[ <working-dir>/script.lkql:3:7 ]
   │
 3 │ print(int > "Hello")
   │       ──────┬──────  
   │             ╰──────── Attempt to compare number with string
───╯
